# bandit

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODERNIZE_NOTES.md  README.md  pyproject.toml  rst2myst_convert_results.txt
.github/workflows/: publish-to-test-pypi.yml
bandit/formatters/: csv.py  custom.py  html.py  json.py  screen.py  text.py  xml.py  yaml.py
doc/source/: config.md  faq.md  index.md  start.md
doc/source/blacklists/: blacklist_calls.md  blacklist_imports.md  index.md
doc/source/formatters/: csv.md  custom.md  html.md  index.md  json.md  sarif.md  screen.md  text.md  xml.md  yaml.md
doc/source/man/: bandit.md
doc/source/plugins/: b101_assert_used.md  b102_exec_used.md  b103_set_bad_file_permissions.md  b104_hardcoded_bind_all_interfaces.md  b105_hardcoded_password_string.md  b106_hardcoded_password_funcarg.md  b107_hardcoded_password_default.md  b108_hardcoded_tmp_directory.md  b109_password_config_option_not_marked_secret.md  b110_try_except_pass.md  b111_execute_with_run_as_root_equals_true.md  b112_try_except_continue.md  b113_request_without_timeout.md  b201_flask_debug_true.md  b202_tarfile_unsafe_members.md  b324_hashlib.md  b501_request_with_no_cert_validation.md  b502_ssl_with_bad_version.md  b503_ssl_with_bad_defaults.md  b504_ssl_with_no_version.md  b505_weak_cryptographic_key.md  b506_yaml_load.md  b507_ssh_no_host_key_verification.md  b508_snmp_insecure_version.md  b509_snmp_weak_cryptography.md  b601_paramiko_calls.md  b602_subprocess_popen_with_shell_equals_true.md  b603_subprocess_without_shell_equals_true.md  b604_any_other_function_with_shell_equals_true.md  b605_start_process_with_a_shell.md  b606_start_process_with_no_shell.md  b607_start_process_with_partial_path.md  b608_hardcoded_sql_expressions.md  b609_linux_commands_wildcard_injection.md  b610_django_extra_used.md  b611_django_rawsql_used.md  b612_logging_config_insecure_listen.md  b613_trojansource.md  b614_pytorch_load_save.md  b701_jinja2_autoescape_false.md  (+3 more)
tests/unit/core/: test_metrics.py
